fixed contact info going out of screen on small sizes

--- a/_scss/_cv.scss
+++ b/_scss/_cv.scss
@@ -13,4 +13,11 @@
   p {
     margin: 0.1em auto;
   }
+
+  td {
+    @media screen and (min-width: 1000px) {
+      display: block;
+    }
+  }
+
 }
